--- a/index.css
+++ b/index.css
@@ -9,36 +9,29 @@ header .lambda {
 }
 
 header .links {
-	font-family: roboto;
-	font-size: 18px;
 	height: 100px;
-	width: 1200px;
-	padding: 50px;
+	width: 1300px;
 	border: none;
 	display: flex;
-	margin-left: 140px;
-	margin-top: -110px;
+	margin-top: -62px;
+	margin-left: 215px;
 	flex-wrap: wrap-reverse;
-	justify-content: flex-start;
     justify-content: space-evenly;	
 }
 
-.links nav a {
-	height: 60px;
-	width: 60px;
+header nav.links a {
+	font-family: roboto;
+	font-size: 20px;
+	text-decoration: none;
 	border: none;
-	margin-right: 60px;
-	display: flex;
-	justify-content: flex-start;
-	justify-content: flex-end;
-	justify-content: space-evenly;
 }
 
 img.jumbo {
 	height: 253px;
 	width: 1260px;
 	padding: 76.5px 400px 76.5px 400px;
-	margin-top: -150px;
+	margin-top: -120px;
+	margin-right: 100px;
 	margin-bottom: 2px;
 	margin-left: -300px;
 }
@@ -47,87 +40,224 @@ img.jumbo {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-evenly;
-	margin-top: -40px;
-}
-
-
-.top-content .text-container {
-	justify-content: row-reverse;
-	height: 100x;
-	width: 500px;
 	font-family: roboto;
 	font-size: 24px;
-	white-space: normal;
-	padding: 1px;
-	margin-left: 1px;
+	height: 150px;
+	width: 1050px;
+	padding: 100px 100px 100px 100px;
+	border: none;
+	margin: -100px 0 100px 150px;
 }
 
-
-
-footer nav.footer-links {
+.top-content .text-container {
 	display: flex;
 	flex-direction: row;
-	height: 100px;
-	width: 10px;
-	padding: 50px;
-	margin: 10px 0 0 10px;
+	justify-content: space-evenly;
 }
 
-footer nav.footer-links a {
-	justify-content: space-around;
-	border: solid;
-	margin-left: 20px;
-}
-
-/*
-header .links nav {
-	padding: 100px 50px 100px 50px;
-	border: solid;
-	margin-left: 200px;
-}
-
-header .jumbo {
+.top-content .text-container h2 {
+	white-space: normal;
+	font-family: roboto;
+	font-size: 24px;
 	height: 50px;
-	width: 200px;
-	padding: 400px;
-	border: solid;
-	margin-bottom: 400px;
+	width: 250px;
+	padding: 10px;
+	border: none;
+	margin: -70px 10px 0px -50px;
 }
 
-.container.middle-content.boxes.box{
-    color: teal;
+.top-content .text-container p {
+	justify-content: space-evenly;
+    white-space: normal;
+    font-family: roboto;
+    font-size: 24px;
+    width: 550px;
+    padding: 10px 10px 10px 10px;
+    border: none;
+    margin: 0px 100px 10px -50px;
 }
-.container.middle-content.boxes.box.box{
-    color: gold;
-}
-.container.middle-content.boxes.box.box.box{
-    color: cadetblue;
-}
-.container.middle-content.boxes.box.box.box.box {
-    color: coral;
-}
-.container.middle-content.boxes.box.box.box.box.box{
-    color: crimson;
-}
-.container.middle-content.boxes.box.box.box.box.box.box{
-    color: forestgreen;
-}
-.container.middle-content.boxes.box.box.box.box.box.box.box{
-    color: darkorchild;
-}
-.container.middle-content.boxes.box.box.box.box.box.box.box.box{
-    color: hotpink;
-}
-.container.middle-content.boxes.box.box.box.box.box.box.box.box{
-    color: indigo;
-}
-.container.middle-content.boxes.box.box.box.box.box.box.box.box.box{
-    color: dodgerblue;
-}
-*/
 
-.bottom-content .text-container {
-	height: 400px;
+.top-content .text-container .text-container h2 {
+	white-space: normal;
+	font-family: roboto;
+	font-size: 24px;
+	height: 50px;
+	width: 250px;
+	padding: 10px;
+	border: none;
+	margin: -60px 10px 10px -70px;
+}
+
+.top-content .text-container .text-container p {
+	font-family: roboto;
+	white-space: normal;
+	font-size: 24px;
+	border: none;
+	padding: 10px -200px 10px -200px;
+	margin: 0px 100px 10px -70px;
+}
+
+.middle-content {
+	display: flex;
+	height: 1000px;
+	width: 1000px;
+}
+
+.middle-content .text-container h2 {
+	font-family: roboto;
+	font-size: 24px;
+	height: 50px;
 	width: 400px;
-	padding: 100px;
+	padding: 10px;
+	border: none;
+	margin: -150px 0px 50px 90px;
+}
+
+.middle-content .boxes {
+	flex-direction: row;
+	font-family: roboto;
+	width: 1200px;
+	border: solid;
+	padding: 10px;
+	margin: -50px 0px 0px 100px;
+}
+
+.middle-content .boxes .box {
+	flex-direction: ltr;
+	flex-wrap: row;
+	box-sizing: border-box;
+	font-family: roboto;
+	font-size: 20px;
+	color: white;
+	background-color: teal;
+	border: solid;
+	height: 100px;
+	width: 100px;
+	padding: 30px 10px 10px 20px;
+}
+
+.middle-content .boxes .box.two {
+	flex-direction: ltr;
+	flex-wrap: column;
+	box-sizing: border-box;
+	font-family: roboto;
+	font-size: 20px;
+	color: white;
+	background-color: gold;
+	border: solid;
+	height: 100px;
+	width: 100px;
+	padding: 30px 10px 10px 20px;
+}
+
+.middle-content .boxes .box.three {
+	flex-direction: ltr;
+	flex-wrap: column;
+	box-sizing: border-box;
+	font-family: roboto;
+	font-size: 20px;
+	color: white;
+	background-color: cadetblue;
+	border: solid;
+	height: 100px;
+	width: 100px;
+	padding: 30px 10px 10px 20px;
+}
+
+.middle-content .boxes .box.four {
+	flex-direction: ltr;
+	flex-wrap: column;
+	box-sizing: border-box;
+	font-family: roboto;
+	font-size: 20px;
+	color: white;
+	background-color: coral;
+	border: solid;
+	height: 100px;
+	width: 100px;
+	padding: 30px 10px 10px 20px;
+}
+
+.middle-content .boxes .box.five {
+	flex-direction: ltr;
+	flex-wrap: column;
+	box-sizing: border-box;
+	font-family: roboto;
+	font-size: 20px;
+	color: white;
+	background-color: crimson;
+	border: solid;
+	height: 100px;
+	width: 100px;
+	padding: 30px 10px 10px 20px;
+}
+
+.middle-content .boxes .box.six {
+	flex-direction: ltr;
+	flex-wrap: column;
+	box-sizing: border-box;
+	font-family: roboto;
+	font-size: 20px;
+	color: white;
+	background-color: forestgreen;
+	border: solid;
+	height: 100px;
+	width: 100px;
+	padding: 30px 10px 10px 20px;
+}
+
+.middle-content .boxes .box.seven {
+	flex-direction: ltr;
+	flex-wrap: column;
+	box-sizing: border-box;
+	font-family: roboto;
+	font-size: 20px;
+	color: white;
+	background-color: darkorchid;
+	border: solid;
+	height: 100px;
+	width: 100px;
+	padding: 30px 10px 10px 20px;
+}
+
+.middle-content .boxes .box.eight {
+	flex-direction: ltr;
+	flex-wrap: column;
+	box-sizing: border-box;
+	font-family: roboto;
+	font-size: 20px;
+	color: white;
+	background-color: hotpink;
+	border: solid;
+	height: 100px;
+	width: 100px;
+	padding: 30px 10px 10px 20px;
+}
+
+.middle-content .boxes .box.nine {
+	flex-direction: ltr;
+	flex-wrap: column;
+	box-sizing: border-box;
+	font-family: roboto;
+	font-size: 20px;
+	color: white;
+	background-color: indigo;
+	border: solid;
+	height: 100px;
+	width: 100px;
+	padding: 30px 10px 10px 20px;
+}
+
+.middle-content .boxes .box.ten {
+	flex-direction: ltr;
+	flex-wrap: column;
+	box-sizing: border-box;
+	font-family: roboto;
+	font-size: 20px;
+	color: white;
+	background-color: dodgerblue;
+	border: solid;
+	height: 100px;
+	width: 100px;
+	padding: 30px 10px 10px 20px;
 }
